--- a/webroot/assets/css/sass/_global_elements.scss
+++ b/webroot/assets/css/sass/_global_elements.scss
@@ -124,6 +124,7 @@
 }
 
 .main-menu {
+    height: 22px;
     padding: 0;
     max-width: 670px;
     margin: 0 10px 15px;
